; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_lavfi.c_print_help.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_lavfi.c_print_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }

@.str = private unnamed_addr constant [279 x i8] c"\0AThis lists %s->%s filters only. Refer to\0A\0A https://ffmpeg.org/ffmpeg-filters.html\0A\0Ato see how to use each filter and what arguments each filter takes.\0AAlso, be sure to quote the FFmpeg filter string properly, e.g.:\0A\0A \22%s\22\0A\0AOtherwise, mpv and libavfilter syntax will conflict.\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_log*, i32, i8*, i8*)* @print_help to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_help(%struct.mp_log* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.mp_log*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.mp_log* %0, %struct.mp_log** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.mp_log*, %struct.mp_log** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @dump_list(%struct.mp_log* %9, i32 %10)
  %12 = load %struct.mp_log*, %struct.mp_log** %5, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @mp_info(%struct.mp_log* %12, i8* getelementptr inbounds ([279 x i8], [279 x i8]* @.str, i64 0, i64 0), i8* %13, i8* %14, i8* %15)
  ret void
}

declare dso_local i32 @dump_list(%struct.mp_log*, i32) #1

declare dso_local i32 @mp_info(%struct.mp_log*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
